# SFML_Project

SFML/: CMakeLists.txt  GameController.cpp  GameController.h  Player.cpp  Player.h  SFML.sln  SFML.vcxproj  SFML.vcxproj.filters  enemy.h  main.cpp
SFML/x64/Debug/: SFML.exe.recipe  SFML.ilk  SFML.map  SFML.vcxproj.FileListAbsolute.txt  vc143.idb
SFML/x64/Debug/SFML.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SFML.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SFML/x64/Release/SFML.tlog/: CL.command.1.tlog  SFML.lastbuildstate
